# quinex-utils

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmark/quantity_parser/: 2_reorder.py  4_analyze_results_files.py
benchmark/quantity_parser/result_files/: eval_results_grobid_quantities_corpus_dev_after_adaptions.json  eval_results_grobid_quantities_corpus_test_after_adaptions.json
dev/parsers/benchmark/: 1_benchmark_script.py  3_transfer_manual_curation.py  README.md
dev/parsers/benchmark/result_files/: eval_results_grobid_quantities_corpus_dev.json  eval_results_grobid_quantities_corpus_test.json
dev/parsers/update_lookups/: 1_create_unit_lookups.py  2_transfer_ambiguous_unit_priorities.py  3_optionally_show_unit_disambiguation_stats.py  4_add_and_remove_units.py  5_show_diff_to_old.py  README.md
dev/parsers/update_lookups/patches/: unit_dimensions_and_kinds_manual_edits.json  unit_quantity_kinds_manual_edits.json  unit_symbol_lookup_manual_edits.json
src/quinex_utils/: __init__.py
src/quinex_utils/functions/: __init__.py  boolean_checks.py  extract_quantity_modifiers.py  normalize.py  num2str.py  str2num.py  units.py
src/quinex_utils/lookups/: character_mapping.py  imprecise_quantities.py  number_words.py  physical_constants.py  quantity_modifiers.py
src/quinex_utils/parsers/: quantity_parser.py  unit_parser.py
src/quinex_utils/parsers/scripts/: 1_create_unit_lookups.py  4_add_and_remove_units.py  5_show_diff_to_old.py  README.md
src/quinex_utils/parsers/static_resources/: README.md  ambiguous_unit_priorities_curated.json  ucum_codes.json  (+4 more)
src/quinex_utils/patterns/: contains.py  imprecise_quantities.py  number.py  number_words.py  numeric_value.py  order_of_magnitude.py  split.py
tests/: test_lookups.py  test_modifier_extraction.py  test_number_utils.py  test_quantity_parser.py  test_str2num.py  test_unit_conversion.py  test_unit_parsers.py
(+3 files in other folders)
