[project]
name = "quinex-utils"
description = "Utils for processing natural language expressions of quantities including efficient rule-based quantity and unit parsers."
version = "0.0.0"
authors = [
    {name = "Jan Göpfert"},
]
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: Unix",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",     
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
]
keywords = [
    "quantity parser",
    "unit parser",
    "qudt",
    "unit ontology",
    "entity linking",
    "quantities",
    "measurements",
    "units",
    "information extraction",
    "nlp",
    "utilities",
]

dependencies = [
    "setuptools",
    "pip",
    "thefuzz[speedup]",
    "numpy==1.24.3",
    "spacy==3.7.5",
    "text-processing-utils==0.0.0",
]

[project.urls]
Homepage = "https://github.com/FZJ-IEK3-VSA/quinex-utils"
Issues = "https://github.com/FZJ-IEK3-VSA/quinex-utils/issues"

[project.optional-dependencies]
optional = [
    "cucopy",
    "numexpr==2.8.4"
]
dev =  [
    "pytest", 
    "rdflib==6.3.1",
    "tqdm==4.65.0",
    "lxml", 
    "beautifulsoup4",
    "html5lib"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-data]
"quinex_utils.parsers.static_resources" = ["*.json"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
